--- a/Assets/WebPlayerTemplates/HappyFunTimes/controllers/gamepad/controller.html
+++ b/Assets/WebPlayerTemplates/HappyFunTimes/controllers/gamepad/controller.html
@@ -69,6 +69,11 @@
                Tilt and Shake to Control
            </div>
         </div>
+        <div id="message">
+            <div id="message-Text" class="hft-instruction hft-fullcenter whiteoutline noevents">
+                Message
+            </div>
+        </div>
       </div>
     </div>
     <div id="full">
