Added player control and mesages

--- a/Assets/WebPlayerTemplates/HappyFunTimes/controllers/gamepad/controller.html
+++ b/Assets/WebPlayerTemplates/HappyFunTimes/controllers/gamepad/controller.html
@@ -69,8 +69,8 @@
                Tilt and Shake to Control
            </div>
         </div>
-        <div id="message">
-            <div id="message-Text" class="hft-instruction hft-fullcenter whiteoutline noevents">
+        <div id="hello">
+            <div id="hello-Text" class="hft-instruction hft-fullcenter whiteoutline noevents">
                 Message
             </div>
         </div>
